<resources>
    <string name="app_name">ImageLabel</string>
    <string name="polygon_image">polygon_image</string>
    <string name="cancel_icon">cancel_icon</string>
    <string name="resize_button">resize_button</string>
    <string name="add_draggable_polygon">Add Draggable Polygon</string>
    <string name="label">Label</string>
    <string name="color">Color</string>
    <string name="crop">Crop</string>
    <string name="upload">Upload</string>
    <string name="text_here">text_here</string>
    <string name="cancel">Cancel</string>
    <string name="thumbnail">thumbnail</string>
    <string name="file_name">file_name</string>
    <string name="brightness">Brightness</string>
</resources>