<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/image_polygon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/label_tv"
            android:layout_margin="15dp"
            android:contentDescription="@string/polygon_image"
            android:scaleType="fitXY"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/remove_bt"
            android:layout_width="@dimen/cancel_icon_dimension"
            android:layout_height="@dimen/cancel_icon_dimension"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/cancel_icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_cancel_24"
            android:background="@drawable/circle_white_background"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/size_bt"
            android:layout_width="@dimen/cancel_icon_dimension"
            android:layout_height="@dimen/cancel_icon_dimension"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:rotation="45"
            android:src="@drawable/forward_arrow_icon"
            app:tint="@color/black"
            android:layout_above="@id/label_tv"
            android:contentDescription="@string/resize_button" />

        <EditText
            android:id="@+id/label_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:selectAllOnFocus="true"
            android:text="@string/text_here"
            android:imeOptions="actionDone"
            android:minHeight="50dp"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>