<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/thumbnail" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_name"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_()"
                android:imeOptions="actionDone"
                android:background="@color/white"
                android:selectAllOnFocus="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/red"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/dark_green"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>